examples/type_system/failing/118_let_missing_eq.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let x 1
}
